• Updated Filter Screen and Home Screen methods to pass and get the Min, Max and Category values

--- a/RVCart/Base.lproj/Main.storyboard
+++ b/RVCart/Base.lproj/Main.storyboard
@@ -17,20 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RV Cart" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIz-kJ-1g7">
+                                <rect key="frame" x="30" y="153" width="333" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="VTN-E7-Mkx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                <color key="textColor" red="0.0" green="0.44313725490196076" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="1x7-iN-Hen">
-                                <rect key="frame" x="30" y="276" width="333" height="300"/>
+                                <rect key="frame" x="30" y="298.66666666666669" width="333" height="255.00000000000006"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIz-kJ-1g7">
-                                        <rect key="frame" x="0.0" y="0.0" width="333" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="VTN-E7-Mkx"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
-                                        <color key="textColor" red="0.0" green="0.44313725490196076" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7Xm-2P-9bg">
-                                        <rect key="frame" x="0.0" y="45" width="333" height="255"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="255"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mvI-SC-CtQ">
                                                 <rect key="frame" x="0.0" y="0.0" width="333" height="255"/>
@@ -120,19 +120,19 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="7Xm-2P-9bg" secondAttribute="trailing" id="HMG-Hp-9Vk"/>
-                                    <constraint firstAttribute="height" constant="300" id="S5B-n5-DiD"/>
-                                    <constraint firstItem="7Xm-2P-9bg" firstAttribute="top" secondItem="lIz-kJ-1g7" secondAttribute="bottom" constant="15" id="UBN-QB-xqg"/>
                                     <constraint firstItem="7Xm-2P-9bg" firstAttribute="leading" secondItem="1x7-iN-Hen" secondAttribute="leading" id="aUc-Ua-ueA"/>
-                                    <constraint firstItem="lIz-kJ-1g7" firstAttribute="top" secondItem="1x7-iN-Hen" secondAttribute="top" id="mRg-J1-hxE"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="lIz-kJ-1g7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="EZt-Lm-gRP"/>
                             <constraint firstItem="1x7-iN-Hen" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hha-XI-6ir"/>
                             <constraint firstItem="1x7-iN-Hen" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="KVb-Zv-CRn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lIz-kJ-1g7" secondAttribute="trailing" constant="30" id="Mvx-cA-HOm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1x7-iN-Hen" secondAttribute="trailing" constant="30" id="g6W-Te-i03"/>
+                            <constraint firstItem="lIz-kJ-1g7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="rEC-4w-r9O"/>
                             <constraint firstItem="1x7-iN-Hen" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xZr-Q2-FDe"/>
                         </constraints>
                     </view>
@@ -288,7 +288,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray6Color">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
