Final updated code

--- a/RVCart/Base.lproj/Main.storyboard
+++ b/RVCart/Base.lproj/Main.storyboard
@@ -9,6 +9,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="S2Q-1U-9Hm">
+            <objects>
+                <viewController id="N8Q-la-PUY" customClass="ViewController" customModule="RVCart" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Br-YE-np7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RV Cart" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMW-ec-MXO">
+                                <rect key="frame" x="30" y="411" width="333" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="U1i-HF-aUT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
+                                <color key="textColor" red="0.0" green="0.4431372549" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2iG-1k-fK4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eMW-ec-MXO" firstAttribute="leading" secondItem="2iG-1k-fK4" secondAttribute="leading" constant="30" id="JIK-64-ZwQ"/>
+                            <constraint firstItem="2iG-1k-fK4" firstAttribute="trailing" secondItem="eMW-ec-MXO" secondAttribute="trailing" constant="30" id="Ubu-D2-oXI"/>
+                            <constraint firstItem="eMW-ec-MXO" firstAttribute="centerY" secondItem="8Br-YE-np7" secondAttribute="centerY" id="p3A-5G-Gq0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="06o-2u-Ubm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VhO-4g-qJg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="309" y="-20"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -18,7 +50,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RV Cart" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIz-kJ-1g7">
-                                <rect key="frame" x="30" y="183" width="333" height="30"/>
+                                <rect key="frame" x="30" y="139" width="333" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="VTN-E7-Mkx"/>
                                 </constraints>
@@ -275,12 +307,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="UMU-hY-dGP"/>
+                        <segue destination="N8Q-la-PUY" kind="relationship" relationship="rootViewController" id="ed0-V0-cDH"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kxf-Kt-qEP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="64.885496183206101" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="-373" y="-27"/>
         </scene>
     </scenes>
     <resources>
